--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-devclub",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/guilhermez2006/NodeJs-DevClub#readme",
   "description": "",
   "dependencies": {
+    "espress": "^0.0.0",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.10.1"
   }
 }
