--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +22,6 @@
   "dependencies": {
     "@prisma/client": "^6.10.1",
     "cors": "^2.8.5",
-    "espress": "^0.0.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
